<resources>
    <string name="app_name">Crypto Exchange</string>
    <string name="network_error">Network error</string>
    <string name="timeout_error">Timeout error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="withdraw_confirmation_resend_time_restriction">You can resend email only once in a minute</string>
    <string name="something_goes_wrong">Something goes wrong</string>
    <string name="dashboard_bottom_tab">Dashboard</string>
    <string name="exchange_bottom_tab">Exchange</string>
    <string name="trading_bottom_tab">Trading</string>
    <string name="balance_bottom_tab">Balance</string>
    <string name="more_bottom_tab">More</string>
    <string name="unauthorized_error">Unauthorized error</string>
    <string name="must_be_greater_than_zero">Must be greater than 0</string>
    <string name="must_be_greater_than_pattern">Must be greater than %1$s</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_conditions_text">By clicking “Sign up with Email above, you acknowledge that you have read and understood, and agree to company\'s Terms &amp; Conditions and Privacy Policy.</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="success">Success!</string>
    <string name="resend_email">Resend email</string>
    <string name="required_field">This field is required</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="invalid_password">Password must be at least 8 characters long and must include a lowercase and uppercase and numeric</string>
    <string name="button_forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="create_new_password">Create new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_not_match">Passwords do no match</string>
    <string name="enable_2fa">Enable 2FA</string>
    <string name="enable_tfa_title">Increase your account protection</string>
    <string name="enable_taf_subtitle">We strongly recommend securing your account with two-factor authentication (2FA). This is an additional layer of security, meaning that if a hacker knows your login/password - he would also need to have your smartphone in possession to access your account.</string>
    <string name="i_ll_do_this_later">I’ll do this later</string>
    <string name="proceed">Proceed</string>
    <string name="tfa_password_title">This app will let you generate the codes used for 2FA authentication. Enter your password.</string>
    <string name="about_2fa">About 2FA</string>
    <string name="start">Start</string>
    <string name="tfa_backup_key_title">This is your backup key. It is the only way to recover your account in case if you lose or change the device with the 2FA app. Save it in safe place.</string>
    <string name="backup_key">Backup key</string>
    <string name="next">Next</string>
    <string name="what_is_2fa">What is 2FA?</string>
    <string name="what_is_tfa_text">We strongly recommend securing your account with two-factor authentication(2FA). This is an additional layer of security, meaning that if a hacker knows your login/password - he would also need to have your smartphone in possession to access your account.</string>
    <string name="how_to_enable_2fa">How to enable 2FA?</string>
    <string name="issues_with_activating_2fa">Issues with activating 2FA?</string>
    <string name="how_to_disable_2fa">If I lost my phone. How to disable 2FA?</string>
    <string name="tfa_enter_code_title">Please download Google authenticator mobile app. In mobile app</string>
    <string name="tfa_code_subtitle_first">Tap “+” and then choose “Enter provided key”.</string>
    <string name="tfa_code_subtitle_second">Manually enter generated manual key. Once you have done it, enter the 6-digit verification code generated by the authentication app.</string>
    <string name="manual_key">Manual key</string>
    <string name="_2fa_code_from_mobile_app">2FA code from mobile app</string>
    <string name="download_on_play_market">Download on Play market</string>
    <string name="_2fa_confirmation">2FA confirmation</string>
    <string name="to_complete_the_2fa_enabling_process">To complete the 2FA enabling process</string>
    <string name="tfa_finished_first_message">Look for an email in your inbox that provides further instructions.</string>
    <string name="tfa_finished_second_message">If you cannot find the email, please check your spam folder</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="incorrect_twofa_code">Incorrect 2FA code</string>
    <string name="copied">Copied</string>
    <string name="copy_failed">Copy failed</string>
    <string name="portfolio">Portfolio</string>
    <string name="disable_tfa_title">Type your 2FA code to disable 2FA on your account</string>
    <string name="disable_2fa">Disable 2FA</string>
    <string name="enter_your_account_password">Enter your account password</string>
    <string name="_2fa_code">2FA code</string>
    <string name="disable">Disable</string>
    <string name="enable_tfa_success_title">To complete the 2FA disabling process look for an email in your inbox that provides further instructions. If you cannot find the email, please check your spam folder.</string>
    <string name="tfa_enabled">2FA enabled</string>
    <string name="tfa_disabled"> 2FA disabled</string>
    <string name="hide_0_balances">Hide 0 balances</string>
    <string name="search">Search</string>
    <string name="coin">Coin</string>
    <string name="name">Name</string>
    <string name="total_balance">Total balance</string>
    <string name="available_balance">Available balance</string>
    <string name="reserved">Reserved</string>
    <string name="email_not_confirmed">Email is not verified</string>
    <string name="history">History</string>
    <string name="trading_history">Trading history</string>
    <string name="view_trading_operations">View trading operations</string>
    <string name="transaction_history">Transaction history</string>
    <string name="view_deposit_and_withdraw_operations">View deposit and withdraw operations</string>
    <string name="documents">Documents</string>
    <string name="access_to_your_uploaded_files">Access to your uploaded files</string>
    <string name="profile_amp_security_settings"><![CDATA[Profile & Security settings]]></string>
    <string name="change_email_change_password_2fa">Change password, 2FA</string>
    <string name="referrals">Referrals</string>
    <string name="referral">Referral</string>
    <string name="send_invitations_to_your_friends">Send invitations to your friends</string>
    <string name="verification">Verification</string>
    <string name="user_verification">User verification</string>
    <string name="verification_not_completed">Complete verification and get access to stock</string>
    <string name="verification_completed">Your account is verified</string>
    <string name="activity">Activity</string>
    <string name="activity_log">Activity log</string>
    <string name="history_of_actions">History of actions</string>
    <string name="faq">FAQ</string>
    <string name="answers_on_popular_questions">Answers on popular questions</string>
    <string name="log_out">Log out</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="terms_conditions_error_message">You must agree to the Terms and conditions </string>
    <string name="amount_exceeded">Must be less than 100000</string>
    <string name="apply">Apply</string>
    <string name="exchange_button_text">Exchange</string>
    <string name="buy_button_text">Buy</string>
    <string name="sell_button_text">Sell</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="market_tab">Market</string>
    <string name="limit_tab">Limit</string>
    <string name="you_will_give">You will give</string>
    <string name="you_will_receive">You will receive</string>
    <string name="payment_type">Payment type</string>
    <string name="exchange_course">Exchange course</string>
    <string name="exchange">Exchange</string>
    <string name="filter">Filter</string>
    <string name="order_preview">Order preview</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="done">Done</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="market_id_to_fee_id_exception_message">You have given incorrect data. Work is in progress on our side. Wait please or contact support.</string>
    <string name="order_complete">Order complete</string>
    <string name="total_balance_pattern">Est. Total Balance %1$.2f %2$s</string>
    <string name="available_currency_pattern">Available: 0.000000 USDT / 0.000000 USDU</string>
    <string name="enter_2fa_code">Enter 2FA code</string>
    <string name="log_in_to_start_using">Log in to start using</string>
    <string name="the_exchange">the exchange</string>
    <string name="sign_in">Sign in</string>
    <string name="exchange_fee">Fee - %s %s</string>
    <string name="deposit">Deposit</string>
    <string name="receive_address">Receive address</string>
    <string name="receive_memo">Receive memo</string>
    <string name="remains">Remains</string>
    <string name="remains_pattern"><![CDATA[<b><font color=#404040>%1$.2f %2$s / </font> <font color=#909090>%3$s%4$.2f</font></b>]]></string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="id">ID</string>
    <string name="amount">Amount</string>
    <string name="fee">Fee</string>
    <string name="none">None</string>
    <string name="dividend">Dividend</string>
    <string name="unrecognized">Unrecognized</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="rejected">Rejected</string>
    <string name="paid_out">Paid out</string>
    <string name="canceled">Canceled</string>
    <string name="email_confirmation">Email confirmation</string>
    <string name="blockchain_confirmation">Blockchain confirmation</string>
    <string name="suspended">Suspended</string>
    <string name="reset">Reset</string>
    <string name="type">Type</string>
    <string name="side">Side</string>
    <string name="from_to_calendar_hint">From/To</string>
    <string name="profile_security_settings_toolbar">Profile and security settings</string>
    <string name="change_password">Change password</string>
    <string name="profile_settings_2fa_toolbar">2FA</string>
    <string name="two_factor_authentication">2 factor authentication</string>
    <string name="your_account_is_protected_by_2fa_system">Your account is protected by 2FA system.</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraw_amount">Withdraw amount</string>
    <string name="memo">Memo</string>
    <string name="withdraw_complete">Withdraw complete</string>
    <string name="withdraw_all_amount">Withdraw all amount</string>
    <string name="trading">Trading</string>
    <string name="chart">Chart</string>
    <string name="orders">Orders</string>
    <string name="orders_history">Orders history</string>
    <string name="my_orders">My orders</string>
    <string name="order_closing">Order closing</string>
    <string name="close_order_message">Are you sure you want to cancel the transaction? The data will not be recovered.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>