<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="37dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_auth_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:src="@drawable/ic_auth_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTitleOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/log_in_to_start_using"
        android:textAppearance="@style/TextAppearance.Bold.24.Tundora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLogo" />

    <TextView
        android:id="@+id/loginTitleTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_exchange"
        android:textAppearance="@style/TextAppearance.Bold.24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitleOne" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/AppInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitleTwo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            style="@style/Widget.TextInputEditText.AuthorizationField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/AppInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:passwordToggleDrawable="@drawable/password_toggle_drawable">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            style="@style/Widget.TextInputEditText.AuthorizationField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonForgotPassword"
        style="@style/AppButton.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="10dp"
        android:gravity="start|center_vertical"
        android:text="@string/button_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/AppButton.Filled"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/authSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="@id/buttonSignUp"
        app:layout_constraintEnd_toStartOf="@id/buttonSignUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonSignUp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        style="@style/AppButton.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/authSubTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>