<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/trading"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextAppearance.SemiBold.17.Tundora" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tabGravity="start"
        app:tabIndicatorGravity="bottom"
        app:tabMode="auto"
        app:tabSelectedTextColor="@color/tundora"
        app:tabTextAppearance="@style/TextAppearance.SemiBold.16"
        app:tabTextColor="@color/gray"
        app:textAllCaps="false">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_history" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_orders" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/currencyPairTextView"
        style="@style/TextAppearance.Bold.24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_drop_down_arrow_closed"
        android:drawablePadding="13dp"
        app:layout_constraintEnd_toEndOf="@+id/topBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topBar"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        tools:text="BTC/USDT" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="@dimen/default_corners_radius"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyPairTextView">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/tradingPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>