<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="22dp"
        android:padding="@dimen/image_button_padding"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tfaEnableHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_2fa"
        android:textAppearance="@style/TextAppearance.SemiBold.17.Tundora"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBack" />

    <ImageView
        android:id="@+id/enableTfaIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_tfa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfaEnableHeader" />

    <TextView
        android:id="@+id/enableTfaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="16dp"
        android:text="@string/enable_tfa_title"
        android:textAppearance="@style/TextAppearance.SemiBold.18.Tundora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enableTfaIcon" />

    <TextView
        android:id="@+id/enableTfaSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/enable_taf_subtitle"
        android:textAppearance="@style/TextAppearance.Regular.16.Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enableTfaTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonContinue"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/proceed"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        style="@style/AppButton.Text"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="@string/i_ll_do_this_later"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
