<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="22dp"
        android:padding="@dimen/image_button_padding"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TfaPasswordHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_2fa"
        android:textAppearance="@style/TextAppearance.SemiBold.17.Tundora"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBack" />

    <TextView
        android:id="@+id/tfaPasswordTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="26dp"
        android:text="@string/tfa_password_title"
        android:textAppearance="@style/TextAppearance.SemiBold.18.Tundora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TfaPasswordHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfaPasswordLayout"
        style="@style/AppInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfaPasswordTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfaPasswordInput"
            style="@style/Widget.TextInputEditText.AuthorizationField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/buttonAboutTfa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAboutTfa"
        style="@style/AppButton.Text"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:text="@string/about_2fa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>