<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/confirmation_dialog_background"
    android:paddingStart="@dimen/horizontal_margin">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/order_closing"
        android:textAppearance="@style/TextAppearance.SemiBold.18.Tundora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/closeDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/close_order_message"
        android:textAppearance="@style/TextAppearance.Regular.14.Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogPositiveButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialogNegativeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogMessage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogNegativeButton"
        style="@style/AppButton.Outlined"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialogPositiveButton"
        app:layout_constraintTop_toTopOf="@id/dialogPositiveButton" />
</androidx.constraintlayout.widget.ConstraintLayout>